adjusted the config for ec2 servers

--- a/templates/ipsec.conf
+++ b/templates/ipsec.conf
@@ -37,10 +37,12 @@ config setup
 	oe=off
 	# which IPsec stack to use. auto will try netkey, then klips then mast
 
-	protostack=auto
+	#protostack=auto
 
-	#raspberry pi
-	#protostack=netkey
+	#raspberry pi / ec2
+	protostack=netkey
+
+	interfaces=%defaultroute
 
 	# Use this to log to a file, or disable logging on embedded systems (like openwrt)
 	#plutostderrlog=/dev/null
@@ -63,12 +65,12 @@ config setup
 #		#auto=add
 
 #direct connect nat
-conn L2TP-PSK-NAT
-    rightsubnet=vhost:%priv
-    #rightsubnet=vhost:%priv,%no,%v4:10.0.0.0/8,%v4:192.168.0.0/16,%v4:172.16.0.0/12
-
-    #the value is a section name; the parameters of that section are appended to this section
-    also=L2TP-PSK-noNAT
+#conn L2TP-PSK-NAT
+#    rightsubnet=vhost:%priv
+#    #rightsubnet=vhost:%priv,%no,%v4:10.0.0.0/8,%v4:192.168.0.0/16,%v4:172.16.0.0/12
+#
+#    #the value is a section name; the parameters of that section are appended to this section
+#    also=L2TP-PSK-noNAT
 
 #connect without nat
 conn L2TP-PSK-noNAT
@@ -88,7 +90,11 @@ conn L2TP-PSK-noNAT
     keylife=1h
     # l2tp-over-ipsec is transport mode
     type=transport
-    left={{l2tp_server_ipaddress}}
+    #left={{l2tp_server_ipaddress}}
+    left={{l2tp_server_ipaddress_private}}
+    leftid={{l2tp_server_ipaddress}}
+    leftsubnet={{l2tp_server_ipaddress_private}}/32
+
     # For updated Windows 2000/XP clients,
     # to support old clients as well, use leftprotoport=17/%any
     leftprotoport=17/1701
