--- a/templates/xl2tpd.conf
+++ b/templates/xl2tpd.conf
@@ -1,6 +1,6 @@
 [global]
     ipsec saref = yes
-    listen-addr = {{l2tp_server_ipaddress}}
+    listen-addr = {{l2tp_server_ipaddress_private}}
 
 [lns default]
     ip range = 10.1.2.2-10.1.2.255
